[PM][P1-pre] sync sanitized acquisition readiness tree